[tool.poetry]
name = "wordle_yx3010"
version = "0.1.0"
description = "wordle helper"
authors = ["nicole"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
myst-parser = "^4.0.1"
furo = "^2025.9.25"
sphinx-autodoc-typehints = "^3.5.2"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
build = "^1.3.0"
twine = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
